css/master.css
/* ... */
a:link, a:visited { color: #772124; }
.entry a:link, .entry a:visited { font-weight: bold; }
a:hover {
	text-decoration: underline;
	color: #58181b;
	}
/*Basic Structure
------------------------------------------------------------ */
#wrapper{
	width: 920px;
	margin: 0 auto;
	text-align: left;
	}
#content{ 
	float: left; 
	width: 600px;
	padding: 20px 20px 20px 0;
	}
#sidebar { 
	float: right; 
	width: 300px;
  padding-bottom: 20px;
	}
.thin-sidebar {
	float: left;
	width: 140px;
	}
.spad { padding-right: 20px; }
#footer { 
	clear: both;
	padding-top: 5px; 
	border-top: 1px solid #ddd;
	}
.clear:after { content: "."; display: block; height: 0; clear: both; visibility: hidden;}
/*Header
------------------------------------------------------------ */
#header {
	padding: 20px 0 10px 0;
	border-bottom: 5px solid #333;
	}
h1#title, div#title {
	font-size: 4.6em;
	font-weight: bold;
	line-height: 1.3em;
	}
h1#title a:link, h1#title a:visited, div#title a:link, div#title a:visited  { color: #444; }
h1#title a:hover, div#title a:hover { color: #772124; text-decoration: none; }
/*Description
---------------------------------------*/
#description {
	float: left;
	}
#description h2 {
	font-size: 1.2em;
	font-weight: normal;
	color: #666;
	}
/*Nav
---------------------------------------*/
#nav {
	float: right;
	font-size: 1.5em;
	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans", Verdana, Arial, sans-serif;
	}
#nav ul {
	padding: 0 0 0 20px;
	list-style: none;
	position: relative;
	}
#nav ul li {
	display: inline;
	margin: 0 0 0 15px;
	}
#nav .page_item a:link, #nav .page_item a:visited {
	color: #333;
	text-decoration: none;
	}
#nav .page_item a:hover {
	color: #772124;
	text-decoration: none;
	padding-top: .1em;
	border-top: 4px solid #772124;
	}
#nav .current_page_item a:link, #nav .current_page_item a:visited, #nav .current_page_item a:hover, #nav .current_page_parent a:link, #nav .current_page_parent a:visited, #nav .current_page_parent a:hover, #nav .current_page_ancestor a:link, #nav .current_page_ancestor a:visited, #nav .current_page_ancestor a:hover {
	color: #772124;
	text-decoration: none;
	padding-top: .1em;
	border-top: 4px solid #772124;
	}
/*Menu
------------------------------------------------------------ */
#menu {
	padding-bottom: 10px;
	}
#menu img {
	border: 2px solid #dddddd;
	}
/*Post Styling
------------------------------------------------------------ */
/*Post Header
---------------------------------------*/
.post-header {
	border-bottom: 4px double #dddddd;
	padding-bottom: 7px;
	}
.post-header h1, .post-header h2 { 
  font-size: 2.6em; 
  line-height: 1.1em;
  }
.post-header h1 a:link, .post-header h1 a:visited,.post-header h2 a:link, .post-header h2 a:visited  { color: #444; }
.post-header h1 a:hover, .post-header h2 a:hover { color: #772124; }
.comments {
	padding-top: 5px;
	font-size: 1.3em;
  color: #757575;
	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans", Verdana, Arial, sans-serif;
	text-transform: uppercase;
	}
.comments a {
	display: block;
	color: #757575;
	padding: 0 0 0 26px;
	background: url(../images/comments-bubble.gif) no-repeat 0 .4em;
	}
.comments a:hover {
	color: #772124;
	background: url(../images/comments-bubble-hover.gif) no-repeat 0 .4em;
	}
.date {
	float: right;
	padding-top: 10px;
	color: #757575;
	font-size: 1.6em;
	font-weight: normal;
	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans", Verdana, Arial, sans-serif;
	text-transform: uppercase;
	}
.date span {
	color: #ddd;
	font-weight: bold;
	}
#single-date {
	float: none;
	}
/*Post Meta
---------------------------------------*/
.meta  {
	margin: 20px 0 5px 0;
	font-size: 1.2em;
  font-family: "Lucida Grande", "Lucida Sans", Verdana, Arial, sans-serif;
	color: #666;
	}
.meta a:link, .meta a:visited {
	color: #666;
	font-style: normal;
	}
.meta a:hover { color: #772124; }
.tags { 
	float: right; 
	font-style: italic;
	}
/*Post Body
---------------------------------------*/
.entry { font-size: 1.3em; }
.entry p { margin-bottom: 10px; }
.entry h2, .entry h3, .entry h4 {
	font-size: 1.3em;
	padding: 15px 0 5px 0;
	}
.entry h3 { 
  padding-top: 10px;
  font-size: 1em;
  }
.entry h4 { 
  padding-top: 10px;
  font-size: .9em;
  }
code {
  padding: 3px;
  background: #E9EBD9;
  color: #000;
  font-family: "Courier New", Courier, monospace; 
  }
blockquote {
	float: left;
	width: 200px;
	padding: 15px;
	margin: 10px 10px 0 0;
	background: #eaeaea;
	border-top: 4px solid #333;
	border-bottom: 4px solid #333;
	}
.entry blockquote p {
	margin: 0;
	padding: 0 0 0 40px;
	font-size: 1.3em;
	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans", Verdana, Arial, sans-serif;
	line-height: 1.3em;
	background: url(../images/blockquote.gif) no-repeat top left;
	}
.highlight-box {
	float: right;
  margin: 0 0 10px 10px;
	width: 200px;
	padding: 10px;
  font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans", Verdana, Arial, sans-serif;
	border-top: 8px solid #000;
	background: #772124;
	color: #fff;
	}
.entry .highlight-box p {
  margin: 10px 0;
  line-height: 1.4em;
  font-size: 1.1em;
  }
.entry .highlight-box ul li {
  font-size: 1.1em;
  background: url(../images/list-square.gif) no-repeat 0 .4em; 
   }
.entry .highlight-box h2, .entry .highlight-box h3, .entry .highlight-box h4 { 
 margin: 0; 
 padding: 0;
 color: #fff; 
 }
.highlight-box h2 { text-transform: uppercase; }
.entry ul {
	margin: 0 0 10px 10px;
	}
.entry ul li {
	display: block;
	margin: 5px 0 0 0;
	padding: 0 0 0 17px;
	background: url(../images/list-star.gif) no-repeat 0 .3em;
	}
.entry ol {
	list-style-type: decimal;
	list-style-position: inside;
	margin: 0 0 10px 10px;
	}
.entry ol li ol li { 
    font-size: .9em;
    list-style-type: lower-roman; 
    }
.entry ol li {
	margin: 5px 0 0 0;
	}
.navigation {
  padding: 10px 0;
  font-size: 1.3em;
  }
.index { padding: 0; }
/* ... */

